# TrueAlpha-spiral

./: .gitattributes  .gitignore  .policy_signature  .replit  ADVANCED_SOVEREIGN_EQUATION.md  ADVANCED_SOVEREIGN_EQUATION.md.bak  AGENTS.md  AGENTS.md.tasmeta.json  AI2_Infographic_B14.html  AI2_Infographic_B14.html.tasmeta.json  AI2_Infographic_Seal_B14.json  AI2_Infographic_Seal_B14.json.tasmeta.json  AI2_Infographic_Seal_B14.md.tasmeta.json  AI_AUDITING_DOCUMENTATION.md  API_REFERENCE.md  API_REFERENCE.md.tasmeta.json  API_WATCHDOG_DOCUMENTATION.md  ARCHITECT_SCHEMA_DOCUMENTATION.md  ARCHITECT_SCHEMA_DOCUMENTATION.md.bak  CERTIFICATE_OF_BOTTLING.md  CHRONOLOGICAL_DEVELOPMENT.md  COMPREHENSIVE_DOCUMENTATION.md  CONCEPTUAL_FINGERPRINT.md  CORE_AXIOMS.md  CYBERNETICS_TO_PYTHONETICS.md  Complete_Full_System_Exposure_Documentation_Fixed_extracted.txt  Cybernetic_TAS_Integration.md  Cycle_3_Initialization.md  Cycle_3_Initialization.md.tasmeta.json  DAY_ONE_STEWARD_DIRECTIVE.md  DAY_ONE_STEWARD_DIRECTIVE.md.tasmeta.json  DECLARATION_OF_SOLE_AUTHORITY.md  DEPENDENCY_ISOLATION_REPORT.md  DEPLOYMENT_LANGCHAIN.md  DEPLOYMENT_LANGCHAIN.md.tasmeta.json  DayZero_Canonical_Readiness.md  ETHICAL_AI_DOCUMENTATION.md  ETHICAL_AI_DOCUMENTATION.md.bak  EXPONENTIAL_ENHANCEMENT_DETAILS.md  Enterprise_AI_Auditing_Solution.md  (+346 more)
.agents/: agent_assets_metadata.toml
.jules/: bolt.md
attached_assets/: 137.txt  AINI v1.txt  ASR .txt  (+78 more)
tas-merkle/: Cargo.toml
tas-merkle/benches/: rollback.rs
tas-merkle/src/: checkpoint.rs  error.rs  hash.rs  lib.rs  node.rs  phoenix.rs  proof.rs  tree.rs
(+659 files in other folders)
