[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
 "cryptography>=44.0.2",
 "flask>=3.1.0",
 "flask-cors>=5.0.1",
 "google-generativeai>=0.8.4",
 "matplotlib>=3.10.1",
 "numpy>=2.2.3",
 "pypdf2>=3.0.1",
 "python-dotenv>=1.1.0",
 "pyyaml>=6.0.2",
 "requests>=2.32.3",
]
