[package]
name = "tas-merkle"
version = "0.1.0"
edition = "2021"
description = "Production-grade Merkle lineage tree validation loop for TrueAlphaSpiral"
license = "MIT"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "rollback"
harness = false

[features]
default = []
